# verifiable-credentials

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: credential.rs  issuer.rs  main.rs  registry.rs  schema.rs  verifier.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: constants.rs  main.rs  routes.rs  util.rs
frontend/src/component/: add_issuer.rs  home.rs  issuer.rs  issuer_details.rs  issuer_home.rs  issuer_list.rs  mod.rs  nav_bar.rs  not_found.rs
frontend/src/component/builder/: builder_home.rs  credential_builder.rs  display_credential.rs  mod.rs
frontend/src/component/credential/: claim_builder.rs  credential_details.rs  credential_home.rs  credential_list.rs  display_credential.rs  make_claims.rs  mod.rs  my_credentials.rs  select_issuer.rs  select_schema.rs
frontend/src/component/issuer/: add_issuer.rs  add_verification_method.rs  issuer_details.rs  issuer_home.rs  issuer_list.rs  mod.rs
frontend/src/component/presentation/: display_result.rs  mod.rs  presentation_builder.rs  presentation_home.rs  select_credential.rs  select_verifier.rs
frontend/src/component/schema/: add_schema.rs  mod.rs  schema_details.rs  schema_home.rs  schema_list.rs
frontend/src/component/verifier/: add_verifier.rs  mod.rs  verifier_home.rs  verifier_list.rs
vc_core/: Cargo.toml
vc_core/src/: lib.rs  proof.rs
