[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vc_core = { path = "../vc_core" }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
]
