[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vc_core = { path = "../vc_core" }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
log = "0.4"
console_log = "1.0.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
indexed_db_futures = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "DomException",
]
