[package]
name = "vc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.96"
blake3 = "1.3.3"
k256 = { version = "0.13.1", features = ["alloc"] }